支持开源的dolphin-weex-ui

--- a/.babelrc
+++ b/.babelrc
@@ -13,7 +13,7 @@
     [
       "component",
       {
-        "libraryName": "@midea/dolphin-weex-ui",
+        "libraryName": "dolphin-weex-ui",
         "libDir": "packages",
         "style": false
       }
