--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "lint:fix": "eslint --ext .js,.vue src --fix . && echo 'Lint complete.'"
   },
   "dependencies": {
-    "@midea/dolphin-weex-ui": "0.0.47",
+    "dolphin-weex-ui": "0.0.18",
     "phantom-limb": "0.0.1",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
